# ytdl-embed

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
ytdl_embed/: app.py  main.py
ytdl_embed/templates/: embed.html
